[package]
name = "nes_rest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "getTopology"
path = "src/bin/getTopology.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
